# lava-core

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt
examples/assets/models/airplane/: airplane.mtl
examples/assets/models/pan/: brass_pan_01_4k.gltf
examples/assets/models/pine/: Pine_4m.mtl
examples/base/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  first_person_camera.cpp  first_person_camera.hpp  frustum.cpp  frustum.hpp  model.cpp  model.hpp
examples/examples/: CMakeLists.txt
examples/examples/01-window/: main.cpp
examples/examples/02-clear_color/: main.cpp
examples/examples/03-triangle/: main.cpp
examples/examples/03-triangle/shaders/compiled/fragment/: main.json
examples/examples/03-triangle/shaders/compiled/vertex/: main.json
examples/examples/03-triangle/shaders/source/fragment/: main.frag
examples/examples/03-triangle/shaders/source/vertex/: main.vert
examples/examples/04-vertex_buffer/: main.cpp
examples/examples/04-vertex_buffer/shaders/compiled/fragment/: main.json
examples/examples/04-vertex_buffer/shaders/compiled/vertex/: main.json
examples/examples/05-index_buffer/: main.cpp
examples/examples/05-index_buffer/shaders/source/vertex/: main.vert
examples/examples/06-push_constants/: main.cpp
examples/examples/06-push_constants/shaders/compiled/fragment/: main.json
examples/examples/06-push_constants/shaders/compiled/vertex/: main.json
examples/examples/06-push_constants/shaders/source/vertex/: main.vert
examples/examples/07-uniform_buffer/: main.cpp
examples/examples/07-uniform_buffer/shaders/compiled/fragment/: main.json
examples/examples/07-uniform_buffer/shaders/compiled/vertex/: main.json
examples/examples/07-uniform_buffer/shaders/source/fragment/: main.frag
examples/examples/07-uniform_buffer/shaders/source/vertex/: main.vert
examples/examples/08-texture/: main.cpp
examples/examples/08-texture/shaders/compiled/fragment/: main.json
examples/examples/08-texture/shaders/compiled/vertex/: main.json
examples/examples/08-texture/shaders/source/fragment/: main.frag
examples/examples/09-model/: main.cpp
examples/examples/09-model/shaders/compiled/fragment/: main.json
examples/examples/09-model/shaders/compiled/vertex/: main.json
examples/examples/09-model/shaders/source/fragment/: main.frag
examples/examples/09-model/shaders/source/vertex/: main.vert
examples/examples/10-phong_shading/: main.cpp
examples/examples/compute_and_instanced/: main.cpp
examples/examples/compute_shader/: main.cpp
examples/examples/deferred_and_hdr/: main.cpp
examples/examples/deferred_rendering/: main.cpp
examples/examples/modern_rendering/: main.cpp
examples/examples/point_light_shadows/: main.cpp
examples/examples/shadow_mapping/: main.cpp
examples/examples/terrain_rendering/: main.cpp
examples/examples/terrain_rendering/shaders/compiled/: deferred.frag.json  gbuffer.frag.json  gbuffer.vert.json  grass.frag.json  hdr.frag.json  quad.vert.json  shadow.frag.json  shadow.vert.json  shadow_with_alpha.frag.json  shadow_with_alpha.vert.json  terrain.frag.json  terrain.tesc.json  terrain.tese.json  terrain.vert.json  tree.vert.json  triangle.vert.json
examples/examples/terrain_rendering/shaders/source/: deferred.frag  gbuffer.frag  gbuffer.vert  grass.frag  hdr.frag  quad.vert  shadow.frag  shadow.vert  shadow_with_alpha.frag  shadow_with_alpha.vert  terrain.frag  terrain.tesc  terrain.tese  tree.vert
examples/examples/tile_based_deferred_rendering/: main.cpp
include/lvcore/: attachment.hpp  (+21 more)
src/: CMakeLists.txt  lvcore.cpp
src/metal/: buffer.mm  command_buffer.mm  common.mm  compute_pipeline.mm  core.mm  denoiser.mm  descriptor_set.mm  device.mm  framebuffer.mm  graphics_pipeline.mm  image.mm  instance.mm  render_pass.mm  sampler.mm  semaphore.mm  shader_module.mm  swap_chain.mm  temporal_aa.mm  upscaler.mm  vertex_descriptor.mm  viewport.mm
src/metal/core/: buffer.mm  command_buffer.mm  compute_pipeline.mm  core.mm  denoiser.mm  descriptor_set.mm  device.mm  framebuffer.mm  graphics_pipeline.mm  image.mm  instance.mm  render_pass.mm  sampler.mm  swap_chain.mm  temporal_aa.mm  vertex_descriptor.mm  viewport.mm
src/threading/: thread_pool.cpp
src/vulkan/: buffer.cpp  buffer_helper.cpp  command_buffer.cpp  common.cpp  compute_pipeline.cpp  core.cpp  descriptor_set.cpp  device.cpp  framebuffer.cpp  graphics_pipeline.cpp  image.cpp  image_helper.cpp  instance.cpp  pipeline_layout.cpp  render_pass.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp  swap_chain.cpp  vertex_descriptor.cpp  viewport.cpp
src/vulkan/core/: buffer.cpp  command_buffer.cpp  core.cpp  descriptor_set.cpp  device.cpp  graphics_pipeline.cpp  image.cpp  image_helper.cpp  instance.cpp  pipeline_layout.cpp  render_pass.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp  swap_chain.cpp  vertex_descriptor.cpp  viewport.cpp
(+210 files in other folders)
